Web Inspector: CPU Usage Timeline - Make Threads section expandable / collapsable https://bugs.webkit.org/show_bug.cgi?id=195085
Reviewed by Matt Baker.

* UserInterface/Base/Setting.js:
New setting to save the Threads expanded/collapsed state.

* UserInterface/Views/CPUTimelineView.css:
(.timeline-view.cpu > .content > .details > .subtitle):
(.timeline-view.cpu > .content > .details > details > .subtitle.threads):
(.timeline-view.cpu > .content > .details > .subtitle): Deleted.
(.timeline-view.cpu > .content > .details > .subtitle.threads): Deleted.
Ensure subtitle styles apply now that one of the subtitles is inside
of a <details> / <summary> element.

* UserInterface/Views/CPUTimelineView.js:
(WI.CPUTimelineView.prototype.initialLayout):
Make the Threads group a <details> / <summary> expandable / collapsed element.

* UserInterface/Views/Main.css:
(summary):
(summary::-webkit-details-marker):
Default styles for <summary>.

Canonical link: https://commits.webkit.org/209523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242242 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/CPUTimelineView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/CPUTimelineView.css
@@ -62,12 +62,13 @@ body[dir=rtl] .timeline-view.cpu > .content > .details > .timeline-ruler {
     right: var(--cpu-timeline-view-details-timeline-ruler-offset-start);
 }
 
-.timeline-view.cpu > .content > .details > .subtitle {
+.timeline-view.cpu > .content > .details > .subtitle,
+.timeline-view.cpu > .content > .details > details > .subtitle {
     padding: 0 10px 10px;
     border-bottom: 1px solid var(--border-color);
 }
 
-.timeline-view.cpu > .content > .details > .subtitle.threads {
+.timeline-view.cpu > .content > .details > details > .subtitle.threads {
     position: relative;
     z-index: calc(var(--timeline-marker-z-index) + 1);
     padding-top: 10px;
